fixed x scrolling on mobile

--- a/src/assets/scss/base/_page.scss
+++ b/src/assets/scss/base/_page.scss
@@ -21,7 +21,13 @@
 			}
 		}
 
+
+	html, body {
+			overflow-x: hidden;
+		}
+
 	body {
+		position: relative;
 		background: _palette(bg);
 		--amplify-primary-color: #0091ff;
 		--amplify-primary-tint: #0073c9;
